@@ -11,9 +11,13 @@
     prismlauncher.url = "github:PrismLauncher/PrismLauncher";
     stylix.url = "github:danth/stylix";
     srvos.url = "github:nix-community/srvos";
-    nix-library.url = "github:EarthGman/nix-library";
     nix-gaming.url = "github:fufexan/nix-gaming";
     nur.url = "github:nix-community/nur";
+
+    nix-library = {
+      url = "github:EarthGman/nix-library";
+      inputs.nixpkgs.follows = "nixpkgs";
+    };
 
     home-manager = {
       url = "github:nix-community/home-manager";
